--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,23 +1,25 @@
 .header {
+  padding: 16px 24px;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.navHeader {
+  max-width: 1280px;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
-  padding: 20px 0;
-  border-bottom: 1px solid black;
-  gap: 10px;
+  gap: 24px;
 }
 
 .headerLink {
-  display: flex;
-  padding: 15px 25px;
+  font-size: 18px;
   text-decoration: none;
-  color: black;
-  background-color: transparent;
-  border: 1px solid black;
-  border-radius: 8px;
-  transition: all 0.3s;
+  color: royalblue;
+}
+
+.headerLink:hover {
+  text-decoration: underline;
 }
 
 .active {
-  color: white;
-  background-color: black;
+  color: red;
 }
