--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,39 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.error {
+  color: red;
+  border: 1px solid red;
+  border-radius: 7px;
+  padding: 12px 24px;
+}
+
+.info {
+  color: blue;
+  border: 1px solid blue;
+  border-radius: 7px;
+  padding: 12px 24px;
+}
+
+.genres {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  font-weight: 600;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
